Fix scroll behaviour and layout bugs

--- a/assets/scss/_content.scss
+++ b/assets/scss/_content.scss
@@ -1,14 +1,17 @@
 #content {
   position: relative;
-  overflow: auto;
-  height: 100vh;
+  // overflow: auto;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  z-index: 0;
+  // margin-top: $navbar_height;
 }
 
 @media only screen and (min-width: $width_breakpoint) {
   #content {
     padding-left: $sidebar_width;
+    // margin-top: 0;
   }
 }
