--- a/assets/scss/_defaults.scss
+++ b/assets/scss/_defaults.scss
@@ -27,7 +27,8 @@ body {
   font-family: 'Lato', sans-serif;
   letter-spacing: 0.05rem;
   line-height: 1.6em;
-  overflow: hidden;
+  // overflow: hidden;
+  overflow:
 }
 
 a {
