--- a/assets/scss/_sidebar.scss
+++ b/assets/scss/_sidebar.scss
@@ -2,6 +2,7 @@
 
 #sidebar {
   position: fixed;
+  z-index: 10;
 }
 
 .slide-enter-active,
