--- a/assets/scss/_topnav.scss
+++ b/assets/scss/_topnav.scss
@@ -1,17 +1,25 @@
 #topbar {
   position: fixed;
-  z-index: 30;
+  z-index: 20;
   width: 100vw;
   height: $navbar_height;
   display: flex;
   justify-content: space-between;
   align-items: stretch;
   align-content: center;
+  top: 0;
 
   >div {
     min-width: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+}
+
+
+@media only screen and (max-width: $width_breakpoint) {
+  #topbar {
+    background: $bgcolor_secondary;
   }
 }
